fixed navbar profile dropdown spacing and nested li

--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -11,6 +11,7 @@
     }
     overflow-y: scroll;
     height: 82vh;
+    padding-bottom: 3em;
 }
 
 
