--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -112,6 +112,10 @@ nav {
      display: none;
 }
 
+.dropdown-left {
+  right: 3.9%;
+}
+
 
 .logo {
     font-size: 50px;
